2018-10-29  Markus Gans  <guru.mail@muenster.de>
	* FTerm is now a data member of FVTerm
	* Fix FListBox prevListItem()

2018-10-26  Markus Gans  <guru.mail@muenster.de>
	* Building Fix for a negative value check (gcc < 4.8)
	* Adding the capacity() method to the FString class

2018-10-21  Markus Gans  <guru.mail@muenster.de>
	* Moving static attributes from FApplication to FWidget

2018-10-17  Markus Gans  <guru.mail@muenster.de>
	* Changed more variables from int to std::size_t

2018-10-14  Markus Gans  <guru.mail@muenster.de>
	* A width or height can not be negative. 
	  For that reason the change from int to std::size_t
	* FString fix for 32-bit architectures

2018-10-13  Markus Gans  <guru.mail@muenster.de>
	* Avoid using dynamic_cast so that you can compile Final Cut 
	  without Run-Time Type Information (RTTI). 
	  Thanks to user1095108 for reporting that.

2018-10-11  Markus Gans  <guru.mail@muenster.de>
	* FKeyboard now uses references for keyboard buffer passing

2018-10-09  Markus Gans  <guru.mail@muenster.de>
	* Terminal detection for newer vte libraries (>= 0.53.0)

2018-10-08  Markus Gans  <guru.mail@muenster.de>
	* Move all termcap code into FTermcap
	* Some small code splits

2018-10-05  Markus Gans  <guru.mail@muenster.de>
	* Remove redundant program code from FString

2018-10-03  Markus Gans  <guru.mail@muenster.de>
	* At the end of the lifetime of an FMenuItem object, 
	  delete its entry from the object list of the parent object
	* Reduce the use of the new operators in the examples
	* Adding a unit test for the FTermData class

2018-10-01  Markus Gans  <guru.mail@muenster.de>
	* Extract FTerm data members into the data class FTermData

2018-09-28  Markus Gans  <guru.mail@muenster.de>
	* FListView now has the ability to sort by columns

2018-09-27  Markus Gans  <guru.mail@muenster.de>
	* Move time event processing from FApplication to FObject

2018-09-26  Markus Gans  <guru.mail@muenster.de>